Tweaks: - Fix top-margin on 2D view - Fix KTX loader crash on firefox - Fix avatar change blanking entire scene - Longer timeout for 2D fallback

--- a/src/index.css
+++ b/src/index.css
@@ -148,6 +148,7 @@ code {
   inset: 0;
   overflow: auto;
   background-color: white;
+  padding-top: 80px;
 }
 
 #portal-2d.show {
